hphp/hack/test/typecheck/constraints/class_variable.php.exp
File "class_variable.php", line 6, characters 24-33:
Some type constraint(s) here are violated (Typing[4110])
File "class_variable.php", line 3, characters 22-22:
'T' is a constrained type
File "class_variable.php", line 3, characters 27-29:
This is a num (int/float)
File "class_variable.php", line 6, characters 35-40:
It is incompatible with a string
